--- a/website/templates/CCAP_new/data.html
+++ b/website/templates/CCAP_new/data.html
@@ -10,9 +10,9 @@
 			<table id="data" class="table table-hover table-bordered">
 				<thead>
 					<tr>
-						<th style="width:30%">File Name:</th>
-						<th style="width:60%">Description</th>
-						<th style="width:5%">Type</th>
+						<th style="width:15%">File Name:</th>
+						<th style="width:50%">Description</th>
+						<th style="width:20%">Type</th>
 						<th style="width:1%"><a id="group_show_new_button" href="#/" class="btn btn-dark" onClick="group_show_new()"><i class="fa fa-fw fa-plus"></i></a></th>
 					</tr>
 				</thead>
@@ -26,6 +26,7 @@
 document.getElementById("link_ccap_new").classList.add("active");
 //Get Data from database
 var content = JSON.parse('{{ CCAP_configuration | tojson }}');
+var ccap_list = JSON.parse('{{ ccap_list | tojson }}');
 //Add Data to Table
 $(document).ready(function(){
 	for (var i = 0; i < content.length; i++) {
@@ -37,9 +38,19 @@ $(document).ready(function(){
 					'<td>'+content[i].type+'</td>'+
 					'<td><a href="#/" class="btn btn-dark" onClick="group_remove_conf(\''+content[i].id+'\', \''+content[i].name+'\')"><i class="fa fa-fw fa-minus"></i></a></td>'+
 				'</tr>');
+			//select_list(content[i].id, content[i].type);
 		}
 	}
 })
+function select_list(id, selected) {
+	for (var i = 0; i < ccap_list.length; i++) {
+		$('#type_'+id).append('<option value="'+ccap_list[i].name+'" selected>'+ccap_list[i].name+'</option>');
+		if (selected==ccap_list[i].name) {
+			$('#type_'+id+' option[value="'+selected+'"]').attr('selected','selected');
+		}
+	}
+}
+
 //Create new config file
 function group_show_new() {
 document.getElementById("group_show_new_button").classList.add("disabled");
@@ -47,9 +58,10 @@ $('#group_data_table').prepend(''+
 	'<tr id="group_new_conf" >'+
 		'<td><input type="text" name="ccap_configuration" class="form-control"></td>'+
 		'<td><input type="text" name="ccap_description" class="form-control"></td>'+
-		'<td><input type="text" name="ccap_type" class="form-control"></td>'+
+		'<td><select name="ccap_type" id="type_new" class="form-control"></select></td>'+
 		'<td><a href="#/" class="btn btn-dark" onClick="group_delete()"><i class="fa fa-fw fa-minus"></i></a></td>'+
 	'</tr>');
+	select_list('new', '');
 }
 //remove created config file
 function group_delete() {
